rzg2l: rzsbc: add bblayers.conf.sample, local.conf.sample for Chromium 109
Signed-off-by: Vu Dang <vu.dang.te@renesas.com>

--- a/meta-rzg2l/docs/template/conf/rzpi/bblayers.conf.sample
+++ b/meta-rzg2l/docs/template/conf/rzpi/bblayers.conf.sample
@@ -27,4 +27,7 @@ BBLAYERS ?= " \
   ${@'${TOPDIR}/../meta-openembedded/meta-networking' if '${VIRTUALIZATION_LAYER}' == 'True' else ''} \
   ${@'${TOPDIR}/../meta-virtualization' if '${VIRTUALIZATION_LAYER}' == 'True' else ''} \
   ${TOPDIR}/../meta-summit-radio/meta-summit-radio-pre-3.4 \
+  ${TOPDIR}/../meta-clang \
+  ${TOPDIR}/../meta-browser/meta-chromium \
   "
+
