--- a/meta-rzg2l/docs/template/conf/rzpi/local.conf.sample
+++ b/meta-rzg2l/docs/template/conf/rzpi/local.conf.sample
@@ -364,3 +364,9 @@ EXTRA_IMAGEDEPENDS += " filesystemflash-win-util "
 
 # Readme documentation
 EXTRA_IMAGEDEPENDS += " readme "
+IMAGE_INSTALL_append = " chromium-ozone-wayland"
+IMAGE_INSTALL_append = " ntp"
+IMAGE_INSTALL_append = " ttf-sazanami-gothic ttf-sazanami-mincho "
+PREFERRED_VERSION_nodejs-native = "14.%"
+DISTRO_FEATURES_append = " h264enc_lib"
+PACKAGECONFIG_pn-chromium-ozone-wayland =" proprietary-codecs"
