rz-common: rzsbc: add Chromium icon to weston panel
Signed-off-by: Vu Dang <vu.dang.te@renesas.com>

--- a/meta-rz-common/dynamic-layers/qt5-layer/demo/files/weston-demo.ini
+++ b/meta-rz-common/dynamic-layers/qt5-layer/demo/files/weston-demo.ini
@@ -27,5 +27,9 @@ icon=/home/root/demo/icons/Qmlvideofx_icon.png
 path=/home/root/demo/scripts/Qmlvideofx-demo.sh
 
 [launcher]
+icon=/home/root/demo/icons/Chromium.png
+path=/home/root/demo/scripts/Chromium.sh
+
+[launcher]
 icon=/home/root/demo/icons/Help_icon.png
 path=/home/root/demo/scripts/Help.sh
